force-app/main/default/objects/Event_Monitoring_Type__mdt/Event_Monitoring_Type__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to keep values for event monitoring types</description>
    <label>Event Monitoring Type</label>
    <pluralLabel>Event Monitoring Types</pluralLabel>
</CustomObject>