force-app/main/default/objects/Event_Monitoring_Type__mdt/fields/Default_Event__c.field-meta.xml
<CustomField>
    <fullName>Default_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Event</label>
    <type>Checkbox</type>
</CustomField>