force-app/main/default/objects/Event_Monitoring_Type__mdt/fields/Enabled_To_Ingest__c.field-meta.xml
<CustomField>
    <fullName>Enabled_To_Ingest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled To Ingest</label>
    <type>Checkbox</type>
</CustomField>