force-app/main/default/objects/Event_Monitoring_Type__mdt/fields/Log_File_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Log_File_Field_Names__c</fullName>
    <label>Log File Field Names</label>
    <length>1333</length>
    <type>LongTextArea</type>
</CustomField>