force-app/main/default/objects/Event_Monitoring_Type__mdt/listViews/My_Data.listView-meta.xml
<ListView>
    <fullName>My_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Default_Event__c</columns>
    <columns>Enabled_To_Admin__c</columns>
    <columns>Enabled_To_Ingest__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Data</label>
</ListView>